# NorthstarLauncher

./: .clang-format  .cmake-format.json  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Dockerfile  Dockerfile.txt  HOSTSTATE.ipch  LICENSE  Makefile  PLUGINS.ipch  R2Northstar.sln  README.md  STANDARDS.md  flake.nix  mingw64.cmake  vcpkg.json
CrashMessage/: CMakeLists.txt  main.cpp
NorthstarDLL/: CMakeLists.txt  ExploitFixes.cpp  ExploitFixes.h  ExploitFixes_UTF8Parser.h  Makefile  NSMem.h  NorthstarDLL.vcxproj  NorthstarDLL.vcxproj.filters  alltalk.cpp  audio.cpp  audio.h  audio_asm.asm  bansystem.cpp  bansystem.h  bitbuf.h  bits.cpp  bits.h  bots.cpp  bots.h  buildainfile.cpp  buildainfile.h  chatcommand.cpp  clientauthhooks.cpp  clientauthhooks.h  clientchathooks.cpp  clientchathooks.h  clientruihooks.cpp  clientruihooks.h  clientvideooverrides.cpp  clientvideooverrides.h  cmake_install.cmake  color.cpp  color.h  concommand.cpp  concommand.h  configurables.cpp  configurables.h  context.cpp  context.h  convar.cpp  (+167 more)
NorthstarDLL/client/: audio.cpp  audio.h  chatcommand.cpp  clientauthhooks.cpp  clientruihooks.cpp  clientvideooverrides.cpp  debugoverlay.cpp  demofixes.cpp  diskvmtfixes.cpp  languagehooks.cpp  latencyflex.cpp  localchatwriter.cpp  localchatwriter.h  modlocalisation.cpp  r2client.cpp  r2client.h  rejectconnectionfixes.cpp  splash.cpp  splash.h
NorthstarDLL/client/scripts/: clientchathooks.cpp  scriptmainmenupromos.cpp  scriptmodmenu.cpp  scriptserverbrowser.cpp  scriptservertoclientstringcommand.cpp
NorthstarDLL/config/: profile.cpp  profile.h
NorthstarDLL/console/: crashhandler.cpp  logging.cpp  logging.h  loghooks.cpp  printcommand.h  printcommands.cpp  printmaps.cpp  sourceconsole.cpp  sourceconsole.h
NorthstarDLL/convar/: convar.cpp  convar.h  misccommands.cpp
NorthstarDLL/core/: hooks.cpp  hooks.h  macros.h  memalloc.cpp  memalloc.h  memory.cpp  memory.h  sourceinterface.cpp  sourceinterface.h  structs.h  tier0.cpp  tier0.h  vanilla.h
NorthstarDLL/core/convar/: concommand.cpp  concommand.h  convar.cpp  convar.h  cvar.cpp  cvar.h
NorthstarDLL/core/filesystem/: filesystem.cpp  filesystem.h  rpakfilesystem.cpp  rpakfilesystem.h
NorthstarDLL/core/math/: bitbuf.h  bits.cpp  bits.h  color.cpp  color.h  vector.h
NorthstarDLL/dedicated/: dedicated.cpp  dedicatedlogtoclient.cpp  dedicatedlogtoclient.h  dedicatedmaterialsystem.cpp
NorthstarDLL/dedicated_server/: dedicated.cpp  dedicatedmaterialsystem.cpp
NorthstarDLL/engine/: host.cpp  hoststate.cpp  hoststate.h  r2engine.cpp  r2engine.h  runframe.cpp
NorthstarDLL/exploit_fixes/: exploitfixes.cpp  exploitfixes_utf8parser.cpp  ns_limits.cpp  ns_limits.h
NorthstarDLL/filesystem/: filesystem.cpp  filesystem.h  rpakfilesystem.cpp
NorthstarDLL/game_functions/: hoststate.cpp  hoststate.h  keyvalues.h  playlist.cpp  r2server.h
NorthstarDLL/hooks/: hooks.cpp  hooks.h
NorthstarDLL/include/: base64.cpp  base64.h  httplib.h
NorthstarDLL/include/crypto/: aes_platform.h  bn_conf.h  evp.h
NorthstarDLL/include/internal/: core.h  cryptlib.h  passphrase.h  property.h  provider.h
NorthstarDLL/include/openssl/: configuration.h  opensslv.h
NorthstarDLL/include/rapidjson/: allocators.h  document.h  encodedstream.h  encodings.h  istreamwrapper.h  pointer.h  prettywriter.h  rapidjson.h  reader.h  schema.h  writer.h
NorthstarDLL/include/spdlog/: async.h  async_logger-inl.h  async_logger.h  common-inl.h  common.h  formatter.h  fwd.h  logger-inl.h  logger.h  pattern_formatter-inl.h  pattern_formatter.h  spdlog-inl.h  spdlog.h  stopwatch.h  tweakme.h  version.h
NorthstarDLL/logging/: crashhandler.cpp  crashhandler.h  dbg.cpp  dbg.h  logging.cpp  logging.h  loghooks.cpp  sourceconsole.cpp  sourceconsole.h
NorthstarDLL/masterserver/: masterserver.cpp  masterserver.h
NorthstarDLL/mods/: modmanager.cpp  modmanager.h  modsavefiles.cpp  modsavefiles.h
NorthstarDLL/mods/autodownload/: moddownloader.cpp  moddownloader.h
NorthstarDLL/mods/compiled/: kb_act.cpp  modkeyvalues.cpp  modpdef.cpp  modscriptsrson.cpp
NorthstarDLL/mods/reload/: reloadmodweapons.cpp  reloadmodweapons_misc.cpp
NorthstarDLL/mods/verified/: verification_results.cpp  verifiedmods.cpp  verifiedmods.h  verifiedmodsutils.cpp  verifiedmodsutils.h
NorthstarDLL/plugins/: plugin_abi.h  pluginbackend.cpp  pluginbackend.h  pluginmanager.cpp  pluginmanager.h  plugins.cpp  plugins.h
NorthstarDLL/plugins/interfaces/: IPluginCallbacks.h  IPluginId.h  (+2 more)
NorthstarDLL/scripts/: scriptdatatables.cpp  scripthttprequesthandler.cpp  scripthttprequesthandler.h  scriptjson.cpp  scriptjson.h  scriptutility.cpp
NorthstarDLL/server/: alltalk.cpp  bots.cpp  bots.h  buildainfile.cpp  r2server.cpp  r2server.h  serverchathooks.cpp  serverchathooks.h  servernethooks.cpp  serverpresence.cpp  serverpresence.h
NorthstarDLL/shared/: gamepresence.cpp  gamepresence.h  keyvalues.cpp  keyvalues.h  maxplayers.cpp  maxplayers.h  misccommands.cpp  misccommands.h  playlist.cpp  playlist.h  sourceinterface.cpp
NorthstarDLL/squirrel/: squirrel.cpp  squirrel.h  squirrelautobind.cpp  squirrelautobind.h  squirrelclasstypes.h  squirreldatatypes.h
NorthstarDLL/util/: memalloc.cpp  printcommands.cpp  printcommands.h  printmaps.cpp  timer.h  utils.cpp  utils.h  version.cpp  version.h  wininfo.cpp  wininfo.h
NorthstarLauncher/: CMakeLists.txt  Makefile  NorthstarLauncher.vcxproj  NorthstarLauncher.vcxproj.filters  main.cpp  resource1.h  resources.rc  splash.cpp  splash.h
loader_launcher_proxy/: CMakeLists.txt  Memory.cpp  Memory.h  dllmain.cpp  framework.h  loader_launcher_proxy.vcxproj  loader_launcher_proxy.vcxproj.filters  pch.h
loader_wsock32_proxy/: CMakeLists.txt  dllmain.cpp  hookutils.cpp  loader.cpp  loader.h  loader_wsock32_proxy.vcxproj  loader_wsock32_proxy.vcxproj.filters  pch.h  wsock32.asm  wsock32.def  wsock32.s
loader_wsock32_proxy/include/: MinHook.x64.lib
primedev/wsockproxy/: CMakeLists.txt  dllmain.cpp  loader.cpp  loader.h  wsock32.def
(+1141 files in other folders)
