# loader_wsock32_proxy

add_library(loader_wsock32_proxy SHARED
            "dllmain.cpp"
            "loader.cpp"
            "loader.h"
            "pch.cpp"
            "pch.h"
            "wsock32.asm"
            "wsock32.def"
)

target_link_libraries(loader_wsock32_proxy PRIVATE
                      ${CMAKE_CURRENT_SOURCE_DIR}/include/MinHook.x64.lib
					  mswsock.lib
					  ws2_32.lib
					  Shlwapi.lib
					  imagehlp.lib
					  dbghelp.lib
					  kernel32.lib
					  user32.lib
					  gdi32.lib
					  winspool.lib
					  comdlg32.lib
					  advapi32.lib
					  shell32.lib
					  ole32.lib
					  oleaut32.lib
					  uuid.lib
					  odbc32.lib
					  odbccp32.lib
)

target_include_directories(loader_wsock32_proxy PRIVATE
                           include
)

target_precompile_headers(loader_wsock32_proxy PRIVATE pch.h)

target_compile_definitions(loader_wsock32_proxy PRIVATE
                           UNICODE
                           _UNICODE
)

set_target_properties(loader_wsock32_proxy PROPERTIES
					  RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/game/bin/x64_retail
                      OUTPUT_NAME wsock32
)
